--- a/MasterChief.DotNet.Infrastructure.XmlSerializer/MasterChief.DotNet.Infrastructure.XmlSerializer.csproj
+++ b/MasterChief.DotNet.Infrastructure.XmlSerializer/MasterChief.DotNet.Infrastructure.XmlSerializer.csproj
@@ -35,6 +35,9 @@
     <Reference Include="MasterChief.DotNet.Infrastructure.Serialize, Version=1.0.0.2, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MasterChief.DotNet.Infrastructure.Serialize.1.0.0.2\lib\net40\MasterChief.DotNet.Infrastructure.Serialize.dll</HintPath>
     </Reference>
+    <Reference Include="MasterChief.DotNet4.Utilities, Version=1.0.0.10, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MasterChief.DotNet4.Utilities.1.0.0.10\lib\net40\MasterChief.DotNet4.Utilities.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
