--- a/MasterChief.DotNet4.5.UtilitiesTests/MasterChief.DotNet4.5.UtilitiesTests.csproj
+++ b/MasterChief.DotNet4.5.UtilitiesTests/MasterChief.DotNet4.5.UtilitiesTests.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Core\LocalizedResourceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\XfResources.cs" />
     <Compile Include="Properties\XfResource.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -70,7 +71,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Properties\XfResource.en-US.resx" />
     <EmbeddedResource Include="Properties\XfResource.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>XfResource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\XfResource.zh-CN.resx" />
